--- a/index.html
+++ b/index.html
@@ -46,100 +46,20 @@
 			<!-- Banner -->
 				<section id="banner">
 					<header>
-						<h2>La création d'un site web est devenue indispensable. c'est le moyen le plus efficace, rapide et moderne de vous faire connaître à grande échelle.</strong>.</h2>
+						<h2>Notre agence web accompagne ses clients dans 
+						la création de site internet. </h2>
+						<!-- b0uda-todo  add labels étude, UX, conception, design, développement, SEO -->
 						<p>
-							C'est pour cela qu' <strong>i crossing</strong> met à votre disposition tout son savoir-faire pour réaliser pour vous des sites web professionnels et attractifs.
+							Notre agence web est capable de répondre à <strong>tous vos besoins.</strong> 
+						</p> 
+						<p>
+							Nos projets sont <strong>livrés à temps</strong>, conformes à vos exigences et à un <strong>prix compétitif.</strong>
 						</p>
 					</header>
 				</section>
 
-			<!-- Carousel -->
-				<section class="carousel">
-					<div class="reel">
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Création de Sites Web</a></h3>
-							</header>
-							<p>Notre agence web conçoit pour vous des sites internet modernes et originaux. De l'UX design a la conception technique, nos sites web disposnt d'une architecture solide et performante. </p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Site e-commerce</a></h3>
-							</header>
-							<p>Vous souhaitez créer une boutique en ligne ? 
-							Avec i crossing, vous choisissez le bon partenaire pour accroître votre visibilité et vos ventes.</p> 
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Développement web</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Référencement Google</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Varius magnis sollicitudin</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Pulvinar sagittis congue</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Fermentum sagittis proin</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Sed quis rhoncus placerat</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Ultrices urna sit lobortis</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Varius magnis sollicitudin</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-						</article>
-
-					</div>
-				</section>
+			
+				
 
 			<!-- Main -->
 				<div class="wrapper style2">
@@ -147,10 +67,9 @@
 					<article id="main" class="container special">
 						<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
 						<header>
-							<h2><a href="#">Sed massa imperdiet magnis</a></h2>
+							<h2>La création d'un site web est devenue indispensable. c'est le moyen le plus efficace, rapide et moderne de vous faire connaître à grande échelle..</h2>
 							<p>
-								Sociis aenean eu aenean mollis mollis facilisis primis ornare penatibus aenean. Cursus ac enim
-								pulvinar curabitur morbi convallis. Lectus malesuada sed fermentum dolore amet.
+								C'est pour cela qu' <strong>i-crossing</strong> utilise les <strong>dernières technologies et techniques</strong> pour réaliser pour vous des sites web <strong>professionnels et attractifs.</strong>
 							</p>
 						</header>
 						<p>
@@ -179,34 +98,41 @@
 							<p>Ipsum volutpat consectetur orci metus consequat imperdiet duis integer semper magna.</p>
 						</header>
 						<div class="row">
-							<article class="4u 12u(mobile) special">
+							<article class="3u 12u(mobile) special">
 								<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
 								<header>
-									<h3><a href="#">Gravida aliquam penatibus</a></h3>
+									<h3><a href="#">Création de Sites Web</a></h3>
 								</header>
 								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+									Notre agence web conçoit pour vous des <strong>sites internet modernes et originaux</strong>. De l'UX design a la conception technique, nos sites web disposnt d'une <strong>architecture solide et performante.</strong>
 								</p>
 							</article>
-							<article class="4u 12u(mobile) special">
+							<article class="3u 12u(mobile) special">
 								<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 								<header>
-									<h3><a href="#">Sed quis rhoncus placerat</a></h3>
+									<h3><a href="#">Site e-commerce</a></h3>
 								</header>
 								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+									Vous souhaitez créer une <strong>boutique en ligne </strong> ? 
+							Avec i crossing, vous choisissez le bon partenaire pour <strong>accroître votre visibilité et vos ventes.</strong>
 								</p>
 							</article>
-							<article class="4u 12u(mobile) special">
+							<article class="3u 12u(mobile) special">
 								<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
 								<header>
-									<h3><a href="#">Magna laoreet et aliquam</a></h3>
+									<h3><a href="#">Développement web</a></h3>
 								</header>
 								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+									Développement <strong> d'applications web sur mesure </strong> pour apporter une <strong> solution performante </strong> à toutes vos problématiques pour un <strong> budget accessible et maîtrisé. </strong>
+								</p>
+							</article>
+							<article class="3u 12u(mobile) special">
+								<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
+								<header>
+									<h3><a href="#">Référencement Google</a></h3>
+								</header>
+								<p>
+									<strong>Spécialiste E-marketing et SEO</strong>, nous vous accompagnons dans votre stratégie de contenu et médias sociaux pour<strong> augmenter votre visibilité et accrocher vos cibles.</strong>
 								</p>
 							</article>
 						</div>
