--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html">Home</a></li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Stage</a></li>
-								<li><a href="no-sidebar.html">Contact</a></li>
+								<!-- <li><a href="left-sidebar.html">Left Sidebar</a></li> -->
+								<!-- <li><a href="right-sidebar.html">Stage</a></li> -->
+								<li><a href="contact.html">Contact</a></li>
 							</ul>
 						</nav>
 
@@ -65,25 +65,19 @@
 				<div class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+						<a href="#" class="image featured"><img src="images/b0uda_website_importance.svg" alt="" /></a>
 						<header>
 							<h2>La création d'un site web est devenue indispensable. c'est le moyen le plus efficace, rapide et moderne de vous faire connaître à grande échelle..</h2>
 							<p>
 								C'est pour cela qu' <strong>i-crossing</strong> utilise les <strong>dernières technologies et techniques</strong> pour réaliser pour vous des sites web <strong>professionnels et attractifs.</strong>
 							</p>
 						</header>
+						<h2 id="project-demand-header" >UN PROJET ?</h2>
 						<p>
-							Commodo id natoque malesuada sollicitudin elit suscipit. Curae suspendisse mauris posuere accumsan massa
-							posuere lacus convallis tellus interdum. Amet nullam fringilla nibh nulla convallis ut venenatis purus
-							sit arcu sociis. Nunc fermentum adipiscing tempor cursus nascetur adipiscing adipiscing. Primis aliquam
-							mus lacinia lobortis phasellus suscipit. Fermentum lobortis non tristique ante proin sociis accumsan
-							lobortis. Auctor etiam porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum
-							consequat integer interdum integer purus sapien. Nibh eleifend nulla nascetur pharetra commodo mi augue
-							interdum tellus. Ornare cursus augue feugiat sodales velit lorem. Semper elementum ullamcorper lacinia
-							natoque aenean scelerisque.
+							Nous sommes à votre disposition pour étudier votre projet et répondre a vos questions.
 						</p>
 						<footer>
-							<a href="#" class="button">Continue Reading</a>
+							<a href="#" class="button">Prendre rendez-vous</a>
 						</footer>
 					</article>
 
@@ -94,12 +88,12 @@
 
 					<section id="features" class="container special">
 						<header>
-							<h2>Morbi ullamcorper et varius leo lacus</h2>
-							<p>Ipsum volutpat consectetur orci metus consequat imperdiet duis integer semper magna.</p>
+							<h2>Services I-crossing</h2>
+							<p> notre agence offre plusieurs services: étude, UX, conception, design, développement, SEO pour garantir le meilleur resulat pour ses clients</p>
 						</header>
-						<div class="row">
+						<div id="icrossing-services" class="row">
 							<article class="3u 12u(mobile) special">
-								<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/b0uda_web.png" alt="" /></a>
 								<header>
 									<h3><a href="#">Création de Sites Web</a></h3>
 								</header>
@@ -108,7 +102,7 @@
 								</p>
 							</article>
 							<article class="3u 12u(mobile) special">
-								<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/b0uda_ecommerce.png" alt="" /></a>
 								<header>
 									<h3><a href="#">Site e-commerce</a></h3>
 								</header>
@@ -118,7 +112,7 @@
 								</p>
 							</article>
 							<article class="3u 12u(mobile) special">
-								<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/b0uda_webapp.png" alt="" /></a>
 								<header>
 									<h3><a href="#">Développement web</a></h3>
 								</header>
@@ -127,7 +121,7 @@
 								</p>
 							</article>
 							<article class="3u 12u(mobile) special">
-								<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/b0uda_google.png" alt="" /></a>
 								<header>
 									<h3><a href="#">Référencement Google</a></h3>
 								</header>
