--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">i-Crossing</a></h1>
+								<h1><a href="index.html" id="logo"><strong>i-Crossing</strong></a></h1>
 								<hr />
-								<p>i-crossing, société experte en data et développement d’applications web & mobile.</p>
+								<p><strong>i-crossing, société experte en data et développement d’applications web & mobile.</strong></p>
 							</header>
 							<footer>
 								<a href="#banner" class="button circled scrolly">Visite</a>
@@ -34,10 +34,10 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="index.html">Home</a></li>
+								<li><a href="index.html"><strong>Home</strong></a></li>
 								<!-- <li><a href="left-sidebar.html">Left Sidebar</a></li> -->
 								<!-- <li><a href="right-sidebar.html">Stage</a></li> -->
-								<li><a href="contact.html">Contact</a></li>
+								<li><a href="contact.html"><strong>Contact</strong></a></li>
 							</ul>
 						</nav>
 
@@ -135,6 +135,11 @@
 				</div>
 
 			<!-- Footer -->
+
+
+			
+
+
 				<div id="footer">
 					<div class="container">
 						<div class="row">
