--- a/index.html
+++ b/index.html
@@ -5,245 +5,177 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>I-crossing Website Home</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-	</head>
-	<body class="homepage">
-		<div id="page-wrapper">
+<head>
+	<title>I-crossing Website Home</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+</head>
+<body class="homepage">
+	<div id="page-wrapper">
 
-			<!-- Header -->
-				<div id="header">
+		<!-- Header -->
+		<div id="header">
 
-					<!-- Inner -->
-						<div class="inner">
-							<header>
-								<h1><a href="index.html" id="logo"><strong>i-Crossing</strong></a></h1>
-								<hr />
-								<p><strong>i-crossing, société experte en data et développement d’applications web & mobile.</strong></p>
-							</header>
-							<footer>
-								<a href="#banner" class="button circled scrolly">Visite</a>
-							</footer>
-						</div>
+			<!-- Inner -->
+			<div class="inner">
+				<header>
+					<h1><a href="index.html" id="logo"><strong>i-Crossing</strong></a></h1>
+					<hr />
+					<p><strong>i-crossing, société experte en data et développement d’applications web & mobile.</strong></p>
+				</header>
+				<footer>
+					<a href="#banner" class="button circled scrolly">Visite</a>
+				</footer>
+			</div>
 
-					<!-- Nav -->
-						<nav id="nav">
-							<ul>
-								<li><a href="index.html"><strong>Home</strong></a></li>
-								<!-- <li><a href="left-sidebar.html">Left Sidebar</a></li> -->
-								<!-- <li><a href="right-sidebar.html">Stage</a></li> -->
-								<li><a href="contact.html"><strong>Contact</strong></a></li>
-							</ul>
-						</nav>
+			<!-- Nav -->
+			<nav id="nav">
+				<ul>
+					<li><a href="index.html"><strong>Home</strong></a></li>
+					<!-- <li><a href="left-sidebar.html">Left Sidebar</a></li> -->
+					<!-- <li><a href="right-sidebar.html">Stage</a></li> -->
+					<li><a href="contact.html"><strong>Contact</strong></a></li>
+				</ul>
+			</nav>
 
-				</div>
+		</div>
 
-			<!-- Banner -->
-				<section id="banner">
-					<header>
-						<h2>Notre agence web accompagne ses clients dans 
-						la création de site internet. </h2>
-						<!-- b0uda-todo  add labels étude, UX, conception, design, développement, SEO -->
-						<p>
-							Notre agence web est capable de répondre à <strong>tous vos besoins.</strong> 
-						</p> 
-						<p>
-							Nos projets sont <strong>livrés à temps</strong>, conformes à vos exigences et à un <strong>prix compétitif.</strong>
-						</p>
-					</header>
-				</section>
+		<!-- Banner -->
+		<section id="banner">
+			<header>
+				<h2>Notre agence web accompagne ses clients dans 
+				la création de site internet. </h2>
+				<!-- b0uda-todo  add labels étude, UX, conception, design, développement, SEO -->
+				<p>
+					Notre agence web est capable de répondre à <strong>tous vos besoins.</strong> 
+				</p> 
+				<p>
+					Nos projets sont <strong>livrés à temps</strong>, conformes à vos exigences et à un <strong>prix compétitif.</strong>
+				</p>
+			</header>
+		</section>
 
-			
-				
 
-			<!-- Main -->
-				<div class="wrapper style2">
 
-					<article id="main" class="container special">
-						<a href="#" class="image featured"><img src="images/b0uda_website_importance.svg" alt="" /></a>
+
+		<!-- Main -->
+		<div class="wrapper style2">
+
+			<article id="main" class="container special">
+				<a onclick="return false;" href="#" class="disabled image featured"><img src="images/b0uda_website_importance.svg" alt="" /></a>
+				<header>
+					<h2>La création d'un site web est devenue indispensable. c'est le moyen le plus efficace, rapide et moderne de vous faire connaître à grande échelle..</h2>
+					<p>
+						C'est pour cela qu' <strong>i-crossing</strong> utilise les <strong>dernières technologies et techniques</strong> pour réaliser pour vous des sites web <strong>professionnels et attractifs.</strong>
+					</p>
+				</header>
+				<h2 id="project-demand-header" >UN PROJET ?</h2>
+				<p>
+					Nous sommes à votre disposition pour étudier votre projet et répondre a vos questions.
+				</p>
+				<footer>
+					<a href="#" class="button">Prendre rendez-vous</a>
+				</footer>
+			</article>
+
+		</div>
+
+		<!-- Features -->
+		<div class="wrapper style1">
+
+			<section id="features" class="container special">
+				<header>
+					<h2>Services I-crossing</h2>
+					<p> notre agence offre plusieurs services: étude, UX, conception, design, développement, SEO pour garantir le meilleur resulat pour ses clients</p>
+				</header>
+				<div id="icrossing-services" class="row">
+					<article class="3u 12u(mobile) special">
+						<a href="#" class="image featured"><img src="images/b0uda_web.png" alt="" /></a>
 						<header>
-							<h2>La création d'un site web est devenue indispensable. c'est le moyen le plus efficace, rapide et moderne de vous faire connaître à grande échelle..</h2>
-							<p>
-								C'est pour cela qu' <strong>i-crossing</strong> utilise les <strong>dernières technologies et techniques</strong> pour réaliser pour vous des sites web <strong>professionnels et attractifs.</strong>
-							</p>
+							<h3><a href="#">Création de Sites Web</a></h3>
 						</header>
-						<h2 id="project-demand-header" >UN PROJET ?</h2>
 						<p>
-							Nous sommes à votre disposition pour étudier votre projet et répondre a vos questions.
+							Notre agence web conçoit pour vous des <strong>sites internet modernes et originaux</strong>. De l'UX design a la conception technique, nos sites web disposnt d'une <strong>architecture solide et performante.</strong>
 						</p>
-						<footer>
-							<a href="#" class="button">Prendre rendez-vous</a>
-						</footer>
 					</article>
-
-				</div>
-
-			<!-- Features -->
-				<div class="wrapper style1">
-
-					<section id="features" class="container special">
+					<article class="3u 12u(mobile) special">
+						<a href="#" class="image featured"><img src="images/b0uda_ecommerce.png" alt="" /></a>
 						<header>
-							<h2>Services I-crossing</h2>
-							<p> notre agence offre plusieurs services: étude, UX, conception, design, développement, SEO pour garantir le meilleur resulat pour ses clients</p>
+							<h3><a href="#">Site e-commerce</a></h3>
 						</header>
-						<div id="icrossing-services" class="row">
-							<article class="3u 12u(mobile) special">
-								<a href="#" class="image featured"><img src="images/b0uda_web.png" alt="" /></a>
-								<header>
-									<h3><a href="#">Création de Sites Web</a></h3>
-								</header>
-								<p>
-									Notre agence web conçoit pour vous des <strong>sites internet modernes et originaux</strong>. De l'UX design a la conception technique, nos sites web disposnt d'une <strong>architecture solide et performante.</strong>
-								</p>
-							</article>
-							<article class="3u 12u(mobile) special">
-								<a href="#" class="image featured"><img src="images/b0uda_ecommerce.png" alt="" /></a>
-								<header>
-									<h3><a href="#">Site e-commerce</a></h3>
-								</header>
-								<p>
-									Vous souhaitez créer une <strong>boutique en ligne </strong> ? 
+						<p>
+							Vous souhaitez créer une <strong>boutique en ligne </strong> ? 
 							Avec i crossing, vous choisissez le bon partenaire pour <strong>accroître votre visibilité et vos ventes.</strong>
-								</p>
-							</article>
-							<article class="3u 12u(mobile) special">
-								<a href="#" class="image featured"><img src="images/b0uda_webapp.png" alt="" /></a>
-								<header>
-									<h3><a href="#">Développement web</a></h3>
-								</header>
-								<p>
-									Développement <strong> d'applications web sur mesure </strong> pour apporter une <strong> solution performante </strong> à toutes vos problématiques pour un <strong> budget accessible et maîtrisé. </strong>
-								</p>
-							</article>
-							<article class="3u 12u(mobile) special">
-								<a href="#" class="image featured"><img src="images/b0uda_google.png" alt="" /></a>
-								<header>
-									<h3><a href="#">Référencement Google</a></h3>
-								</header>
-								<p>
-									<strong>Spécialiste E-marketing et SEO</strong>, nous vous accompagnons dans votre stratégie de contenu et médias sociaux pour<strong> augmenter votre visibilité et accrocher vos cibles.</strong>
-								</p>
-							</article>
-						</div>
-					</section>
-
+						</p>
+					</article>
+					<article class="3u 12u(mobile) special">
+						<a href="#" class="image featured"><img src="images/b0uda_webapp.png" alt="" /></a>
+						<header>
+							<h3><a href="#">Développement web</a></h3>
+						</header>
+						<p>
+							Développement <strong> d'applications web sur mesure </strong> pour apporter une <strong> solution performante </strong> à toutes vos problématiques pour un <strong> budget accessible et maîtrisé. </strong>
+						</p>
+					</article>
+					<article class="3u 12u(mobile) special">
+						<a href="#" class="image featured"><img src="images/b0uda_google.png" alt="" /></a>
+						<header>
+							<h3><a href="#">Référencement Google</a></h3>
+						</header>
+						<p>
+							<strong>Spécialiste E-marketing et SEO</strong>, nous vous accompagnons dans votre stratégie de contenu et médias sociaux pour<strong> augmenter votre visibilité et accrocher vos cibles.</strong>
+						</p>
+					</article>
 				</div>
+			</section>
 
-			<!-- Footer -->
+		</div>
+
+		<!-- Footer -->
 
 
-			
 
 
-				<div id="footer">
-					<div class="container">
-						<div class="row">
 
-							<!-- Tweets -->
-								<section class="4u 12u(mobile)">
-									<header>
-										<h2 class="icon fa-twitter circled"><span class="label">Tweets</span></h2>
-									</header>
-									<ul class="divided">
-										<li>
-											<article class="tweet">
-												Amet nullam fringilla nibh nulla convallis tique ante sociis accumsan.
-												<span class="timestamp">5 minutes ago</span>
-											</article>
-										</li>
-										<li>
-											<article class="tweet">
-												Hendrerit rutrum quisque.
-												<span class="timestamp">30 minutes ago</span>
-											</article>
-										</li>
-										<li>
-											<article class="tweet">
-												Curabitur donec nulla massa laoreet nibh. Lorem praesent montes.
-												<span class="timestamp">3 hours ago</span>
-											</article>
-										</li>
-										<li>
-											<article class="tweet">
-												Lacus natoque cras rhoncus curae dignissim ultricies. Convallis orci aliquet.
-												<span class="timestamp">5 hours ago</span>
-											</article>
-										</li>
-									</ul>
-								</section>
-
-							<!-- Posts -->
-								<section class="4u 12u(mobile)">
-									<header>
-										<h2 class="icon fa-file circled"><span class="label">Posts</span></h2>
-									</header>
-									<ul class="divided">
-										<li>
-											<article class="post stub">
-												<header>
-													<h3><a href="#">Nisl fermentum integer</a></h3>
-												</header>
-												<span class="timestamp">3 hours ago</span>
-											</article>
-										</li>
-										<li>
-											<article class="post stub">
-												<header>
-													<h3><a href="#">Phasellus portitor lorem</a></h3>
-												</header>
-												<span class="timestamp">6 hours ago</span>
-											</article>
-										</li>
-										<li>
-											<article class="post stub">
-												<header>
-													<h3><a href="#">Magna tempus consequat</a></h3>
-												</header>
-												<span class="timestamp">Yesterday</span>
-											</article>
-										</li>
-										<li>
-											<article class="post stub">
-												<header>
-													<h3><a href="#">Feugiat lorem ipsum</a></h3>
-												</header>
-												<span class="timestamp">2 days ago</span>
-											</article>
-										</li>
-									</ul>
-								</section>
-
+		<div id="footer">
+			<div class="container">
+				<div class="row">
+							<section id="section_map" class="8u 12u(mobile)">
+								<div id="map">
+								</div>
+								<p>
+									Angle Rues Ahmed Amine et Yaacoub El Mansour IMM B Bureau No 3 , Kenitra 
+								</p>
+							</section>
 							<!-- Photos -->
-								<section class="4u 12u(mobile)">
-									<header>
-										<h2 class="icon fa-camera circled"><span class="label">Photos</span></h2>
-									</header>
-									<div class="row 25%">
-										<div class="6u">
-											<a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
-										</div>
-										<div class="6u$">
-											<a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a>
-										</div>
-										<div class="6u">
-											<a href="#" class="image fit"><img src="images/pic12.jpg" alt="" /></a>
-										</div>
-										<div class="6u$">
-											<a href="#" class="image fit"><img src="images/pic13.jpg" alt="" /></a>
-										</div>
-										<div class="6u">
-											<a href="#" class="image fit"><img src="images/pic14.jpg" alt="" /></a>
-										</div>
-										<div class="6u$">
-											<a href="#" class="image fit"><img src="images/pic15.jpg" alt="" /></a>
-										</div>
+							<section class="4u 12u(mobile)">
+								<!-- <header>
+									<h2 class="icon fa-camera circled"><span class="label">Photos</span></h2>
+								</header> -->
+								<div class="row 25%">
+									<div class="6u">
+										<a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
 									</div>
-								</section>
+									<div class="6u$">
+										<a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a>
+									</div>
+									<div class="6u">
+										<a href="#" class="image fit"><img src="images/pic12.jpg" alt="" /></a>
+									</div>
+									<div class="6u$">
+										<a href="#" class="image fit"><img src="images/pic13.jpg" alt="" /></a>
+									</div>
+									<div class="6u">
+										<a href="#" class="image fit"><img src="images/pic14.jpg" alt="" /></a>
+									</div>
+									<div class="6u$">
+										<a href="#" class="image fit"><img src="images/pic15.jpg" alt="" /></a>
+									</div>
+								</div>
+							</section>
 
 						</div>
 						<hr />
@@ -251,27 +183,26 @@
 							<div class="12u">
 
 								<!-- Contact -->
-									<section class="contact">
-										<header>
-											<h3>Nisl turpis nascetur interdum?</h3>
-										</header>
-										<p>Urna nisl non quis interdum mus ornare ridiculus egestas ridiculus lobortis vivamus tempor aliquet.</p>
-										<ul class="icons">
-											<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-											<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-											<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-											<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
-											<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-											<li><a href="#" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-										</ul>
-									</section>
+								<section class="contact">
+									<p>Email: webicrossing@gmail.com <br>
+									Mobile : 0675046242 | Fix : 0537394290</p>
+									<p></p>
+									<ul class="icons">
+										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+										<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
+										<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+										<li><a href="#" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+									</ul>
+								</section>
 
 								<!-- Copyright -->
-									<div class="copyright">
-										<ul class="menu">
-											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-										</ul>
-									</div>
+								<div class="copyright">
+									<ul class="menu">
+										<li>&copy; i crossing. All rights reserved.</li><li>Design: i crossing</li>
+									</ul>
+								</div>
 
 							</div>
 
@@ -279,9 +210,14 @@
 					</div>
 				</div>
 
-		</div>
+			</div>
 
-		<!-- Scripts -->
+			<!-- Scripts -->
+
+			
+			<script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCzx0rAXID7oWAYp65TCEqAcQFGUaFWQ0Q&callback=initMap">
+    </script>
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.dropotron.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
@@ -290,6 +226,20 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
+			
+			 <script>
+      function initMap() {
+        var uluru = {lat: 34.259217, lng: -6.601413};
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 17,
+          center: uluru
+        });
+        var marker = new google.maps.Marker({
+          position: uluru,
+          map: map
+        });
+      }
+    </script>
 
-	</body>
-</html>
+		</body>
+		</html>
