change icrossing services img

--- a/index.html
+++ b/index.html
@@ -97,7 +97,17 @@
 				</header>
 				<div id="icrossing-services" class="row">
 					<article class="3u 12u(mobile) special">
-						<a href="#" class="image featured"><img src="images/b0uda_web.png" alt="" /></a>
+
+
+
+
+						<a href="#" class="image featured"><img src="images/ai_website.png" alt="Création de Sites Web" /></a>
+
+
+						
+
+
+
 						<header>
 							<h3><a href="#">Création de Sites Web</a></h3>
 						</header>
@@ -106,7 +116,7 @@
 						</p>
 					</article>
 					<article class="3u 12u(mobile) special">
-						<a href="#" class="image featured"><img src="images/b0uda_ecommerce.png" alt="" /></a>
+						<a href="#" class="image featured"><img src="images/ai_ecommerce.png" alt="Création de Sites E-commmerce" /></a>
 						<header>
 							<h3><a href="#">Site e-commerce</a></h3>
 						</header>
@@ -116,16 +126,16 @@
 						</p>
 					</article>
 					<article class="3u 12u(mobile) special">
-						<a href="#" class="image featured"><img src="images/b0uda_webapp.png" alt="" /></a>
+						<a href="#" class="image featured"><img src="images/ai_webapp.png" alt="Développement application web" /></a>
 						<header>
-							<h3><a href="#">Développement web</a></h3>
+							<h3><a href="#">Développement d'application web</a></h3>
 						</header>
 						<p>
 							Développement <strong> d'applications web sur mesure </strong> pour apporter une <strong> solution performante </strong> à toutes vos problématiques pour un <strong> budget accessible et maîtrisé. </strong>
 						</p>
 					</article>
 					<article class="3u 12u(mobile) special">
-						<a href="#" class="image featured"><img src="images/b0uda_google.png" alt="" /></a>
+						<a href="#" class="image featured"><img src="images/ai_seo.png" alt="Référencement seo Google" /></a>
 						<header>
 							<h3><a href="#">Référencement Google</a></h3>
 						</header>
