Add card style to icrossing services img

--- a/index.html
+++ b/index.html
@@ -98,15 +98,7 @@
 				<div id="icrossing-services" class="row">
 					<article class="3u 12u(mobile) special">
 
-
-
-
-						<a href="#" class="image featured"><img src="images/ai_website.png" alt="Création de Sites Web" /></a>
-
-
-						
-
-
+						<a href="#" style="min-height: 0;" class="demo-card-image mdl-card mdl-shadow--2dp image featured"><img src="images/ai_website.png" alt="Création de Sites Web" /></a>
 
 						<header>
 							<h3><a href="#">Création de Sites Web</a></h3>
@@ -116,7 +108,7 @@
 						</p>
 					</article>
 					<article class="3u 12u(mobile) special">
-						<a href="#" class="image featured"><img src="images/ai_ecommerce.png" alt="Création de Sites E-commmerce" /></a>
+						<a href="#" style="min-height: 0;" class="demo-card-image mdl-card mdl-shadow--2dp image featured"><img src="images/ai_ecommerce.png" alt="Création de Sites E-commmerce" /></a>
 						<header>
 							<h3><a href="#">Site e-commerce</a></h3>
 						</header>
@@ -126,7 +118,7 @@
 						</p>
 					</article>
 					<article class="3u 12u(mobile) special">
-						<a href="#" class="image featured"><img src="images/ai_webapp.png" alt="Développement application web" /></a>
+						<a href="#" style="min-height: 0;" class="demo-card-image mdl-card mdl-shadow--2dp image featured"><img src="images/ai_webapp.png" alt="Développement application web" /></a>
 						<header>
 							<h3><a href="#">Développement d'application web</a></h3>
 						</header>
@@ -135,7 +127,7 @@
 						</p>
 					</article>
 					<article class="3u 12u(mobile) special">
-						<a href="#" class="image featured"><img src="images/ai_seo.png" alt="Référencement seo Google" /></a>
+						<a href="#" style="min-height: 0;" class="demo-card-image mdl-card mdl-shadow--2dp image featured"><img src="images/ai_seo.png" alt="Référencement seo Google" /></a>
 						<header>
 							<h3><a href="#">Référencement Google</a></h3>
 						</header>
