--- a/index.html
+++ b/index.html
@@ -15,6 +15,26 @@
 	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+
+
+	<!-- customize font -->
+
+	<style type="text/css">
+
+	/*Header fonts*/
+
+	h1,h2,h3,h4,h5,h6{
+		font-family: 'Roboto Condensed', sans-serif;
+	}
+
+	#footer h2{
+		font-family: 'Aladin', cursive;
+
+	}
+
+</style>
+
+
 </head>
 <body class="homepage">
 	<div id="page-wrapper">
@@ -151,7 +171,7 @@
 				
 				<div class="row">
 					<section id="section_map" class="7u 12u(mobile)">
-						<h2 >Carte</h2>
+						<h2 >Venez sur place</h2>
 						<div id="map">
 						</div>
 						<p>
@@ -163,7 +183,7 @@
 
 					<section class="5u 12u(mobile)">
 
-						<h2 class="contact-header2">Contact</h2>
+						<h2 class="contact-header2">Contactez-nous</h2>
 
 
 						<div   class="demo-card-wide mdl-card mdl-shadow--2dp form-contact-container">
