--- a/index.html
+++ b/index.html
@@ -17,24 +17,36 @@
 	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 
 
-	<!-- customize font -->
-
 	<style type="text/css">
 
-	/*Header fonts*/
+		/*Header fonts*/
 
-	h1,h2,h3,h4,h5,h6{
-		font-family: 'Roboto Condensed', sans-serif;
-	}
+		h1,h2,h3,h4,h5,h6{
+			font-family: 'Roboto Condensed', sans-serif;
+		}
 
-	#footer h2{
-		font-family: 'Aladin', cursive;
+		#footer h2{
+			font-family: 'Aladin', cursive;
 
-	}
+		}
 
-</style>
+/* rewrite the color of btns*/
+
+		.btn-new-color{
+	background-color: #555156;
+}
+.btn-new-color:hover{
+	background-color: #AAA8AB;
+}
 
 
+#nav ul li a strong:hover{
+	color: #AAA8AB;
+	font-style: underline;
+}
+
+
+	</style>
 </head>
 <body class="homepage">
 	<div id="page-wrapper">
@@ -50,17 +62,17 @@
 					<p><strong>i-crossing, société experte en data et développement d’applications web & mobile.</strong></p>
 				</header>
 				<footer>
-					<a href="#banner" class="button circled scrolly">Visite</a>
+					<a href="#banner" class="btn-new-color button circled scrolly">Visite</a>
 				</footer>
 			</div>
 
 			<!-- Nav -->
 			<nav id="nav">
 				<ul>
-					<li><a href="index.html"><strong>Home</strong></a></li>
+					<li><a href="#" onclick="return false;"><strong>Home</strong></a></li>
 					<!-- <li><a href="left-sidebar.html">Left Sidebar</a></li> -->
 					<!-- <li><a href="right-sidebar.html">Stage</a></li> -->
-					<li><a href="contact.html"><strong>Contact</strong></a></li>
+					<li><a href="#" onclick="return false;"><strong>Contact</strong></a></li>
 				</ul>
 			</nav>
 
@@ -88,7 +100,7 @@
 		<div class="wrapper style2">
 
 			<article id="main" class="container special">
-				<a onclick="return false;" href="#" class="disabled image featured"><img src="images/b0uda_website_importance.svg" alt="" /></a>
+				<a onclick="return false;" href="#" class="disabled image featured"><img src="images/icrossing_website_builder.png" alt="" /></a>
 				<header>
 					<h2>La création d'un site web est devenue indispensable. c'est le moyen le plus efficace, rapide et moderne de vous faire connaître à grande échelle..</h2>
 					<p>
@@ -100,7 +112,7 @@
 					Nous sommes à votre disposition pour étudier votre projet et répondre a vos questions.
 				</p>
 				<footer>
-					<a href="#" class="button">Prendre rendez-vous</a>
+					<a href="#" class="btn-new-color button">Prendre rendez-vous</a>
 				</footer>
 			</article>
 
@@ -118,7 +130,7 @@
 				<div id="icrossing-services" class="row">
 					<article class="3u 12u(mobile) special">
 
-						<a href="#" style="min-height: 0;" class="demo-card-image mdl-card mdl-shadow--2dp image featured"><img src="images/ai_website.png" alt="Création de Sites Web" /></a>
+						<a href="#" style="min-height: 0;" class="demo-card-image mdl-card mdl-shadow--2dp image featured"><img src="images/service_web_design.png" alt="Création de Sites Web" /></a>
 
 						<header>
 							<h3><a href="#">Création de Sites Web</a></h3>
@@ -128,7 +140,7 @@
 						</p>
 					</article>
 					<article class="3u 12u(mobile) special">
-						<a href="#" style="min-height: 0;" class="demo-card-image mdl-card mdl-shadow--2dp image featured"><img src="images/ai_ecommerce.png" alt="Création de Sites E-commmerce" /></a>
+						<a href="#" style="min-height: 0;" class="demo-card-image mdl-card mdl-shadow--2dp image featured"><img src="images/service_ecommerce.png" alt="Création de Sites E-commmerce" /></a>
 						<header>
 							<h3><a href="#">Site e-commerce</a></h3>
 						</header>
@@ -138,7 +150,7 @@
 						</p>
 					</article>
 					<article class="3u 12u(mobile) special">
-						<a href="#" style="min-height: 0;" class="demo-card-image mdl-card mdl-shadow--2dp image featured"><img src="images/ai_webapp.png" alt="Développement application web" /></a>
+						<a href="#" style="min-height: 0;" class="demo-card-image mdl-card mdl-shadow--2dp image featured"><img src="images/service_app_dev.png" alt="Développement application web" /></a>
 						<header>
 							<h3><a href="#">Développement d'application web</a></h3>
 						</header>
@@ -147,7 +159,7 @@
 						</p>
 					</article>
 					<article class="3u 12u(mobile) special">
-						<a href="#" style="min-height: 0;" class="demo-card-image mdl-card mdl-shadow--2dp image featured"><img src="images/ai_seo.png" alt="Référencement seo Google" /></a>
+						<a href="#" style="min-height: 0;" class="demo-card-image mdl-card mdl-shadow--2dp image featured"><img src="images/service_seo.png" alt="Référencement seo Google" /></a>
 						<header>
 							<h3><a href="#">Référencement Google</a></h3>
 						</header>
